# qt-image-scanner

./: CMakeLists.txt  MyGraphicsView.cpp  MyGraphicsView.h  QtImageScannerConfig.h.in  README.md  main.cpp  mainwindow.cpp  mainwindow.h
